deps/v8/test/message/fail/dynamic-import-missing-specifier.out
*%(basename)s:5: SyntaxError: import() requires a specifier
import();
      ^
SyntaxError: import() requires a specifier
